--- a/public/index.html
+++ b/public/index.html
@@ -6,12 +6,27 @@
         <meta name="viewport" content="width=device-width,initial-scale=1.0" />
         <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
         <title>g2-frontend</title>
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900|Material+Icons" />
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css" />
+        <link
+            rel="stylesheet"
+            href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900|Material+Icons"
+        />
+        <link
+            rel="stylesheet"
+            href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css"
+        />
+        <link
+            rel="stylesheet"
+            href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+            integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
+            crossorigin="anonymous"
+        />
     </head>
     <body>
         <noscript>
-            <strong>We're sorry but g2-frontend doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+            <strong
+                >We're sorry but g2-frontend doesn't work properly without
+                JavaScript enabled. Please enable it to continue.</strong
+            >
         </noscript>
         <div id="app"></div>
         <!-- built files will be auto injected -->
