--- a/public/index.html
+++ b/public/index.html
@@ -7,17 +7,7 @@
         <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
 
         <!-- Roboto -->
-        <link
-            rel="stylesheet"
-            href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900|Material+Icons"
-        />
-
-        <!-- Material Design icons -->
-        <link
-            rel="stylesheet"
-            type="text/css"
-            href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css"
-        />
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900" />
 
         <!-- Title -->
         <title>G2 - The gateway to success</title>
@@ -25,9 +15,8 @@
     <body>
         <noscript>
             <strong>
-                We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't
-                work properly without JavaScript enabled. Please enable it to
-                continue.
+                We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled.
+                Please enable it to continue.
             </strong>
         </noscript>
 
